# ultron

./: .devenv.flake.nix  .envrc  .gitignore  Cargo.toml  README.md  README.org  accounts.json.bak  daily_log.json.bak  devenv.nix  flake.nix  justfile  typos.toml  ultron.service
.devenv/: devenv.json  input-paths.txt  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run
.devenv/gc/: shell-3-link
.direnv/: flake-profile  flake-profile-11-link  flake-profile-12-link  flake-profile-13-link  flake-profile-5-link  flake-profile-7-link  flake-profile-9-link
.github/: copilot-instructions.md
.github/workflows/: rust.yml
admin/: .gitignore  Cargo.toml
admin/src/: main.rs
assets/: copypasta.toml
core/: Cargo.toml
core/src/: command.rs  copypasta.rs  dice.rs  error.rs  event_processor.rs  http_server.rs  io.rs  lib.rs  lm.rs  nlp.rs  ollama.rs
core/src/chatbot/: mod.rs
core/src/grafana/: mod.rs
core/src/grafana/testdata/: grafana_example.json  mod.rs
core/src/http_server/: trace_layer.rs
core/src/mcp/: client.rs  mod.rs
core/src/nlp/: lm.rs  mod.rs  ollama.rs  response.rs
db/: .env  .gitignore  Cargo.toml
db/migrations/2020-12-02-053556_create_accounts/: down.sql  up.sql
db/migrations/2020-12-07-072023_create_inventory/: down.sql  up.sql
db/migrations/2020-12-29-194540_item_available_update/: down.sql  up.sql
db/migrations/2021-01-03-042659_inventory_add_server/: down.sql  up.sql
db/migrations/2021-02-22-033611_optout/: down.sql  up.sql
db/src/: accounts.rs  error.rs  ids.rs  inventory.rs  items.rs  lib.rs  model.rs  schema.rs
prompts/: ultron.md
rbatis/: Cargo.toml  test.db-shm  test.db-wal
rbatis/src/: accounts.rs  error.rs  lib.rs
scripts/: nushell.nu
src/: chat.rs  coins.rs  commands.rs  copypasta.rs  data.rs  db.rs  discord.rs  error.rs  gambling.rs  github.rs  hn.rs  items.rs  logger.rs  main.rs  schema.rs  tokens.rs
src/coins/: ledger.rs  transaction.rs
src/discord/: messages.rs
src/hn/: api.rs
ultron/: Cargo.toml
ultron/src/: main.rs
ultron_discord/: Cargo.toml
ultron_discord/src/: error.rs  lib.rs
