[workspace]
default-members = ["ultron"]
members = ["ultron", "ultron_discord", "core"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.metadata.crane]
name = "ultron"

[workspace.dependencies]
anyhow = "1.0.100"
async-openai = "0.28.3"
axum = { version = "0.8.5", features = ["macros"] }
bon = "3.7.2"
caith = "4.2.4"
clap = { version = "4.5.48", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display"] }
envy = "0.4.2"
insta = { version = "1.43.2", features = ["redactions", "json"] }
extend = "1.2.0"
ollama-rs = "0.3.2"
rmcp = { version = "0.3.2", features = [
  "macros",
  "server",
  "transport-worker",
  "transport-streamable-http-server",
] }
reqwest = { version = "0.12.22", features = [
  "stream",
  "deflate",
  "rustls-tls",
] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serenity = { version = "0.12", features = ["framework", "standard_framework"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.8.23"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "tracing-log"] }
tyche = "0.3.1"
ultron_core = { path = "core" }
ultron_discord = { path = "ultron_discord" }
utoipa = { version = "5.4.0", features = ["axum_extras", "yaml"] }
utoipa-axum = "0.2.0"
