[package]
name = "ultron_core"
edition.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
bon.workspace = true
caith.workspace = true
derive_more.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
utoipa.workspace = true
