[package]
name = "ultron_core"
edition.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
async-trait.workspace = true
bon.workspace = true
caith.workspace = true
derive_more.workspace = true
futures.workspace = true
ollama-rs.workspace = true
papaya.workspace = true
rmcp.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
tyche.workspace = true
utoipa-axum.workspace = true
utoipa.workspace = true

[dev-dependencies]
insta.workspace = true
