[package]
name = "db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# date and time
chrono = { version = "0.4", features = ["serde"] }

log = "0.4"
fast_log = "1.3"

rbatis = { version = "2.0" }

[dev-dependencies]
tokio-test = "0.4.2"

